# kailio

./: .gitignore  .pre-commit-config.yaml  .test_env  Dockerfile  README.md  boot.sh  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  pytest.ini
kailio/: __init__.py  admin.py  assets.py  cli.py  factories.py  model.py  settings.py  wsgi.py
kailio/blog/: __init__.py  errors.py  views.py
kailio/crm/: __init__.py  errors.py  views.py
kailio/main/: __init__.py  errors.py  views.py
kailio/static/css/: banner.css  index.css  main.css  navbar.css  posts.css  styles.css
kailio/static/css/blog/: posts.css
kailio/static/js/: disqus.js  main.js
kailio/templates/: 500.html  base.html  cv.html  index.html  macros.html  portfolio.html  resume.html
kailio/templates/admin/: edit.html
kailio/templates/blog/: index.html  post.html
migrations/: env.py
migrations/versions/: 2d0e5c6cc5c3_add_images_table.py  333a67a5bd77_unique_slug.py  b473485cea76_initial.py  b5701277bb59_add_hits_to_page.py  b6756ff75a38_add_names_2_user.py  b7a572b0ee88_file_uploadset.py  c14a28ced33e_enable_comments.py
tests/: conftest.py  kailio_test.py  test_kailio.py
