[tool.poetry]
name = "kailio"
version = "0.1.0"
description = ""
authors = ["Andrew Kail <andrew.a.kail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-sqlalchemy = "^2.4.1"
Bootstrap-Flask = "^1.3.1"
Flask-Security-Too = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.4.0"
flake8 = "^3.8.1"
isort = "^4.3.21"
mypy = "^0.770"
pydocstyle = "^5.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
